--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "MR.NADUWA-V1",
+  "name": "KAVI_EXE-V1",
   "description": "Javascript WhatsApp bot made by YourName",
   "logo": "https://telegra.ph/file/04f33ed3a84d24104a9ef.jpg",
   "keywords": ["bot"],
