--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "qrcode-terminal": "^0.12.0",
     "yt-search":"2.11.1",
     "api-dylux":"1.8.5",
-    "ytdl-mp3": "3.4.0"
+    "ytdl-mp3": "3.4.0",
+    "ytsr": "^3.5.0"
     
   
   }
