--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "vm": "^0.1.0",
     "qrcode-terminal": "^0.12.0",
     "yt-search":"2.11.1",
-    "api-dylux":"1.8.5",
-    "ytdl-mp3": "3.4.0",
-    "ytsr": "^3.5.0"
+    "api-dylux":"1.8.5"
     
   
   }
